--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     font-family:Open Sans,Arial;
-    color:#454545;
+    color: white;
     font-size:16px;
     margin:2em auto;
     max-width:800px;
